--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,17 @@
       href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;500;600;700&family=Work+Sans:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Swiper -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
     <!-- CSS -->
     <link rel="stylesheet" href="/dist/output.css" />
     <title>NFT Marketplace</title>
   </head>
   <body class="bg-purple">
-    <div class="wrapper relative w-full">
+    <div class="wrapper">
       <!-- Navbar -->
       <div class="navbar">
         <div class="grid grid-cols-2 container mx-auto">
@@ -60,7 +65,7 @@
       </div>
 
       <!-- Hero Section -->
-      <div class="container mx-auto px-4 xl:px-0 mt-12">
+      <div class="container mx-auto px-4 xl:px-0 mt-32">
         <div class="grid grid-cols-2 gap-y-8 lg:gap-x-4 align-middle">
           <div class="col-span-2 lg:col-span-1">
             <h1 class="hero-section-title">
@@ -107,7 +112,7 @@
       </div>
 
       <!-- Counter Section -->
-      <div class="container mx-auto px-4 xl:px-0 mt-16">
+      <div class="container mx-auto px-4 xl:px-0 mt-32">
         <div class="grid grid-cols-3 gap-4 align-middle text-center text-white">
           <div class="col-span-1">
             <h1 class="text-4xl font-oxanium font-bold">32k+</h1>
@@ -123,6 +128,162 @@
           </div>
         </div>
       </div>
+
+      <!-- Sponsors Section -->
+      <div class="container mx-auto px-4 xl:px-0 mt-32">
+        <div class="sponsors-wrapper">
+          <div class="sponsor">
+            <img src="./images/coinbase.png" alt="Coinbase" />
+          </div>
+          <div class="sponsor">
+            <img src="./images/blockchain.png" alt="Blockchain" />
+          </div>
+          <div class="sponsor">
+            <img src="./images/binance.png" alt="Binance" />
+          </div>
+          <div class="sponsor">
+            <img src="./images/bitmex.png" alt="Bitmex" />
+          </div>
+        </div>
+      </div>
+
+      <!-- Live Auctions Section -->
+      <div class="container mx-auto px-4 xl:px-0 mt-32 text-center relative">
+        <div class="w-full flex justify-center">
+          <h1 class="live-auctions-title">Live Auctions</h1>
+        </div>
+
+        <div class="w-full flex justify-end mt-16 pr-5 mb-4">
+          <button class="swiper-before swiper-btn">
+            <i class="fas fa-long-arrow-left"></i>
+          </button>
+          <button class="swiper-after swiper-btn">
+            <i class="fas fa-long-arrow-right"></i>
+          </button>
+        </div>
+
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <div class="slide-card">
+                <div class="art-card-top bg-[url('/src/images/art1.png')]">
+                  <div class="art-timer">
+                    <p class="art-timer-text">03:18:24</p>
+                  </div>
+                </div>
+                <div class="art-card-bottom">
+                  <div class="grid grid-cols-2">
+                    <div class="col-span-1 flex justify-start items-center">
+                      <img
+                        src="./images/profile-img.png"
+                        role="Profile Image"
+                      />
+                      <p class="art-card-creator-text">
+                        Virtual Art <br />
+                        <span>by @wzard</span>
+                      </p>
+                    </div>
+                    <div class="col-span-1 flex justify-end items-center">
+                      <i class="far fa-heart art-card-heart-icon"></i>
+                      <p class="text-lg text-gray-400">92</p>
+                    </div>
+                  </div>
+
+                  <div class="flex justify-between align-middle mt-4">
+                    <h5 class="text-xl text-gray-400 font-work-sans">
+                      Current Bid
+                    </h5>
+                    <h2 class="text-2xl text-white font-oxanium font-semibold">
+                      4.89 ETH
+                    </h2>
+                  </div>
+
+                  <button class="art-card-bid-button">Place a bid</button>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide-card">
+                <div class="art-card-top bg-[url('/src/images/art2.png')]">
+                  <div class="art-timer">
+                    <p class="art-timer-text">03:18:24</p>
+                  </div>
+                </div>
+                <div class="art-card-bottom">
+                  <div class="grid grid-cols-2">
+                    <div class="col-span-1 flex justify-start items-center">
+                      <img
+                        src="./images/profile-img.png"
+                        role="Profile Image"
+                      />
+                      <p class="art-card-creator-text">
+                        Virtual Art <br />
+                        <span>by @wzard</span>
+                      </p>
+                    </div>
+                    <div class="col-span-1 flex justify-end items-center">
+                      <i class="far fa-heart art-card-heart-icon"></i>
+                      <p class="text-lg text-gray-400">92</p>
+                    </div>
+                  </div>
+
+                  <div class="flex justify-between align-middle mt-4">
+                    <h5 class="text-xl text-gray-400 font-work-sans">
+                      Current Bid
+                    </h5>
+                    <h2 class="text-2xl text-white font-oxanium font-semibold">
+                      4.89 ETH
+                    </h2>
+                  </div>
+
+                  <button class="art-card-bid-button">Place a bid</button>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide-card">
+                <div class="art-card-top bg-[url('/src/images/art3.png')]">
+                  <div class="art-timer">
+                    <p class="art-timer-text">03:18:24</p>
+                  </div>
+                </div>
+                <div class="art-card-bottom">
+                  <div class="grid grid-cols-2">
+                    <div class="col-span-1 flex justify-start items-center">
+                      <img
+                        src="./images/profile-img.png"
+                        role="Profile Image"
+                      />
+                      <p class="art-card-creator-text">
+                        Virtual Art <br />
+                        <span>by @wzard</span>
+                      </p>
+                    </div>
+                    <div class="col-span-1 flex justify-end items-center">
+                      <i class="far fa-heart art-card-heart-icon"></i>
+                      <p class="text-lg text-gray-400">92</p>
+                    </div>
+                  </div>
+
+                  <div class="flex justify-between align-middle mt-4">
+                    <h5 class="text-xl text-gray-400 font-work-sans">
+                      Current Bid
+                    </h5>
+                    <h2 class="text-2xl text-white font-oxanium font-semibold">
+                      4.89 ETH
+                    </h2>
+                  </div>
+
+                  <button class="art-card-bid-button">Place a bid</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 
@@ -132,6 +293,8 @@
     integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
     crossorigin="anonymous"
   ></script>
+  <!-- Swiper -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <!-- JS -->
   <script src="./index.js"></script>
 </html>
