how it works section completed

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
       </div>
 
       <!-- Hero Section -->
-      <div class="container mx-auto px-4 xl:px-0 mt-32">
+      <div class="container mx-auto px-4 xl:px-0 mt-20">
         <div class="grid grid-cols-2 gap-y-8 lg:gap-x-4 align-middle">
           <div class="col-span-2 lg:col-span-1">
             <h1 class="hero-section-title">
@@ -112,10 +112,10 @@
       </div>
 
       <!-- Counter Section -->
-      <div class="container mx-auto px-4 xl:px-0 mt-32">
+      <div class="container mx-auto px-4 xl:px-0 mt-20">
         <div class="grid grid-cols-3 gap-4 align-middle text-center text-white">
           <div class="col-span-1">
-            <h1 class="text-4xl font-oxanium font-bold">32k+</h1>
+            <h1 class="text-4xl font-oxanium font-bold">20k+</h1>
             <p class="text-lg font-work-sans">Artworks</p>
           </div>
           <div class="col-span-1">
@@ -130,7 +130,7 @@
       </div>
 
       <!-- Sponsors Section -->
-      <div class="container mx-auto px-4 xl:px-0 mt-32">
+      <div class="container mx-auto px-4 xl:px-0 mt-20">
         <div class="sponsors-wrapper">
           <div class="sponsor">
             <img src="./images/coinbase.png" alt="Coinbase" />
@@ -148,7 +148,7 @@
       </div>
 
       <!-- Live Auctions Section -->
-      <div class="container mx-auto px-4 xl:px-0 mt-32 text-center relative">
+      <div class="container mx-auto px-4 xl:px-0 mt-20 text-center relative">
         <div class="w-full flex justify-center">
           <h1 class="live-auctions-title">Live Auctions</h1>
         </div>
@@ -281,6 +281,74 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- How It Works Section -->
+      <div class="container mx-auto px-4 xl:px-0 mt-20">
+        <h1 class="text-white text-2xl text-center font-bold font-oxanium">
+          How it works
+        </h1>
+        <div class="grid grid-cols-8 lg:grid-cols-7 pt-8 gap-y-6">
+          <div
+            class="col-span-8 lg:col-span-1 flex items-center flex-col relative"
+          >
+            <img
+              class="p-3 bg-art-purple border border-art-purple rounded-full"
+              src="./images/wallet-icon.png"
+              role="Icon"
+            />
+            <p
+              class="text-yellow text-2xl text-center font-bold font-oxanium mt-3 capitalize"
+            >
+              Set up your wallet
+            </p>
+          </div>
+          <div class="dashed-line"></div>
+          <div
+            class="col-span-8 lg:col-span-1 flex items-center flex-col relative"
+          >
+            <img
+              class="p-3 bg-art-purple border border-art-purple rounded-full"
+              src="./images/collection-icon.png"
+              role="Icon"
+            />
+            <p
+              class="text-yellow text-2xl text-center font-bold font-oxanium mt-3 capitalize"
+            >
+              Create your collection
+            </p>
+          </div>
+          <div class="dashed-line"></div>
+          <div
+            class="col-span-8 lg:col-span-1 flex items-center flex-col relative"
+          >
+            <img
+              class="p-3 bg-art-purple border border-art-purple rounded-full"
+              src="./images/nft-icon.png"
+              role="Icon"
+            />
+            <p
+              class="text-yellow text-2xl text-center font-bold font-oxanium mt-3 capitalize"
+            >
+              Add your NFTs
+            </p>
+          </div>
+          <div class="dashed-line"></div>
+          <div
+            class="col-span-8 lg:col-span-1 flex items-center flex-col relative"
+          >
+            <img
+              class="p-3 bg-art-purple border border-art-purple rounded-full"
+              src="./images/sales-icon.png"
+              role="Icon"
+            />
+            <p
+              class="text-yellow text-2xl text-center font-bold font-oxanium mt-3 capitalize"
+            >
+              List them for sale
+            </p>
           </div>
         </div>
       </div>
