top creators section completed

--- a/src/index.html
+++ b/src/index.html
@@ -577,6 +577,64 @@
           </div>
         </div>
       </div>
+
+      <!-- Top Creators Section -->
+      <div class="container mx-auto px-4 xl:px-0 mt-20">
+        <div class="w-full flex justify-center">
+          <h1 class="popular-collections-title">Top Creators</h1>
+        </div>
+
+        <div class="grid grid-cols-2 gap-6 mt-16">
+          <div class="creator-card">
+            <img src="./images/profile-img.png" role="Profile Image" />
+            <p class="creator-card-text">
+              Wzard Dee <br />
+              <span class="text-base font-thin">4.89 ETH</span>
+            </p>
+            <div class="vertical-line"></div>
+            <p class="creator-card-text">
+              33 <br />
+              <span class="text-lg font-normal text-gray-500">Items</span>
+            </p>
+          </div>
+          <div class="creator-card">
+            <img src="./images/profile-img2.png" role="Profile Image" />
+            <p class="creator-card-text">
+              Wzard Dee <br />
+              <span class="text-base font-thin">4.89 ETH</span>
+            </p>
+            <div class="vertical-line"></div>
+            <p class="creator-card-text">
+              33 <br />
+              <span class="text-lg font-normal text-gray-500">Items</span>
+            </p>
+          </div>
+          <div class="creator-card">
+            <img src="./images/profile-img3.png" role="Profile Image" />
+            <p class="creator-card-text">
+              Wzard Dee <br />
+              <span class="text-base font-thin">4.89 ETH</span>
+            </p>
+            <div class="vertical-line"></div>
+            <p class="creator-card-text">
+              33 <br />
+              <span class="text-lg font-normal text-gray-500">Items</span>
+            </p>
+          </div>
+          <div class="creator-card">
+            <img src="./images/profile-img4.png" role="Profile Image" />
+            <p class="creator-card-text">
+              Wzard Dee <br />
+              <span class="text-base font-thin">4.89 ETH</span>
+            </p>
+            <div class="vertical-line"></div>
+            <p class="creator-card-text">
+              33 <br />
+              <span class="text-lg font-normal text-gray-500">Items</span>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 
