subscribe section completed

--- a/src/index.html
+++ b/src/index.html
@@ -584,7 +584,7 @@
           <h1 class="popular-collections-title">Top Creators</h1>
         </div>
 
-        <div class="grid grid-cols-2 gap-6 mt-16">
+        <div class="grid grid-cols-4 gap-6 mt-16">
           <div class="creator-card">
             <img src="./images/profile-img.png" role="Profile Image" />
             <p class="creator-card-text">
@@ -634,6 +634,19 @@
             </p>
           </div>
         </div>
+      </div>
+
+      <!-- Subscribe Section -->
+      <div class="container mx-auto px-4 xl:px-0 mt-20 text-center">
+        <h1 class="text-4xl text-white font-oxanium font-bold px-10">
+          Ready for Next NFT Drop?
+        </h1>
+        <input
+          class="subscribe-input"
+          type="email"
+          placeholder="info@gmail.com"
+        />
+        <button class="subscribe-btn">Subscribe</button>
       </div>
     </div>
   </body>
